# state-observation

./: CMakeLists.txt  CMakeLists.txt.save  TAGS  test_model-base-ekf-flex-estimator-imu.cpp
doc/: Doxyfile.extra.in
include/state-observation/dynamical-system/: bidim-elastic-inv-pendulum-dyn-sys.hpp  dynamical-system-functor-base.hpp  dynamical-system-simulator.hpp  imu-dynamical-system.hpp  imu-magnetometer-dynamical-system.hpp
include/state-observation/dynamical-system/algorithm/: rigid-body-kinematics.hpp  rigid-body-kinematics.hxx
include/state-observation/examples/: imu-attitude-trajectory-reconstruction.hpp  imu-attitude-trajectory-reconstruction.hxx  offline-ekf-flexibility-estimation.hpp  offline-ekf-flexibility-estimation.hxx
include/state-observation/flexibility-estimation/: dynamical-system.hpp  ekf-flexibility-estimator-base.hpp  fixed-contact-ekf-flex-estimator-imu.hpp  flexibility-estimator-base.hpp  imu-elastic-local-frame-dynamical-system.hpp  imu-fixed-contact-dynamical-system.hpp  model-base-ekf-flex-estimator-imu.hpp  stable-imu-fixed-contact-dynamical-system.hpp
include/state-observation/noise/: gaussian-white-noise.hpp  noise-base.hpp
include/state-observation/observer/: extended-kalman-filter.hpp  kalman-filter-base.hpp  kalman-filter.hpp  linear-kalman-filter.hpp  observer-base.hpp  zero-delay-observer.hpp
include/state-observation/observer/compile-time/: compile-time-extended-kalman-filter.hpp  compile-time-extended-kalman-filter.hxx  compile-time-kalman-filter-base.hpp  compile-time-kalman-filter-base.hxx  compile-time-kalman-filter.hpp  compile-time-kalman-filter.hxx  compile-time-observer-base.hpp  compile-time-observer-base.hxx  compile-time-zero-delay-observer.hpp  compile-time-zero-delay-observer.hxx  extended-kalman-filter.hpp  kalman-filter-base.hpp  kalman-filter.hpp  observer-base.hpp  zero-delay-observer.hpp
include/state-observation/sensors-simulation/: accelerometer-gyrometer-magnetometer.hpp  accelerometer-gyrometer.hpp  algebraic-sensor.hpp  sensor-base.hpp
include/state-observation/sensors-simulation/algorithm/: linear-acceleration.hpp  magnetic-field.hpp  rotation-velocity.hpp
include/state-observation/tools/: definitions.hpp  definitions.hxx  hrp2.hpp  logger.hpp  logger.hxx  miscellaneous-algorithms.hpp  probability-law-simulation.hpp
include/state-observer/: extended-kalman-filter.hpp  extended-kalman-filter.hxx  kalman-filter-base.hpp  kalman-filter-base.hxx  kalman-filter.hpp  kalman-filter.hxx  observer-base.hpp  observer-base.hxx  zero-delay-observer.hpp  zero-delay-observer.hxx
include/state-observer/template/: extended-kalman-filter.hpp  kalman-filter-base.hpp  kalman-filter.hpp  observer-base.hpp  zero-delay-observer.hpp
src/: CMakeLists.txt  accelerometer-gyrometer-magnetometer.cpp  accelerometer-gyrometer.cpp  algebraic-sensor.cpp  bidim-elastic-inv-pendulum-dyn-sys.cpp  definitions.cpp  dynamical-system-functor-base.cpp  dynamical-system-simulator.cpp  dynamical-system.cpp  ekf-flexibility-estimator-base.cpp  extended-kalman-filter.cpp  fixed-contact-ekf-flex-estimator-imu.cpp  flexibility-estimator-base.cpp  gaussian-white-noise.cpp  imu-dynamical-system.cpp  imu-elastic-local-frame-dynamical-system.cpp  imu-fixed-contact-dynamical-system.cpp  imu-magnetometer-dynamical-system.cpp  kalman-filter-base.cpp  kalman-filter.cpp  linear-acceleration.cpp  linear-kalman-filter.cpp  logger.cpp  magnetic-field.cpp  model-base-ekf-flex-estimator-imu.cpp  observer-base.cpp  probability-law-simulation.cpp  rigid-body-kinematics.cpp  rotation-velocity.cpp  sensor-base.cpp  stable-imu-fixed-contact-dynamical-system.cpp  zero-delay-observer.cpp
unit-testings/: CMakeLists.txt  HRP2LAAS-IMU-Observation.cpp  flex-estimation-test.cpp  imu-test.cpp  other-tests.cpp  real-offline-flexibility-estimator.cpp  simple-flex-estimation-test.cpp  test-kalman-filter-template.cpp  test-kalman-filter.cpp  test_acceleration_stabilization.cpp  test_imu-elastic-local-frame-dynamical-system.cpp  test_model-base-ekf-flex-estimator-imu.cpp  test_model-base-ekf-flex-estimator-imu_withComBias_withForcesSensors.cpp  tools.hpp  tools.hxx  zmpEstimation.cpp
